assets/css/chat.scss
.ChatLive {
  #chat_input_container {
    display: flex;
    width: 100%;
    pointer-events: visible;
    background-color: rgba(0, 0, 0, 0.2);
    border-radius: var(--border-radius);

    #chat_input,
    #chat_btn_emotes {
      width: 2em;
      height: 2em;
    }

    #chat_btn_emotes {
      border-radius: var(--border-radius);
    }
  }

  .chat_container {
    display: flex;
    flex-direction: column;
    overflow-y: hidden;

    > .top {
      flex: 1;
      display: flex;
      overflow: hidden;
    }
  }

  #chat_messages,
  #chat_userlist {
    overflow-y: auto;
    padding: 0.5em;
    scrollbar-width: thin;
    scrollbar-color: rgba(255, 255, 255, 0.5) rgba(0, 0, 0, 0);
  }

  .chat_form {
    flex: 1;
    display: flex;
  }

  #chat_input {
    flex: 1;
    border-radius: var(--border-radius);
  }

  #chat_messages {
    display: flex;
    flex-direction: column-reverse;
    flex: 1;

    > div {
      padding: 0 0.25em;

      > * {
        background-color: rgba(0, 0, 0, 0.2);
        border-radius: 0.1em;
      }
    }

    .message_content {
      display: inline-block;
      padding: 0 0.25em;

      img {
        max-height: 6em;
      }
    }

    .flex {
      display: flex;
    }

    .flex.hidden {
      display: none;
    }

    hr {
      opacity: 40%;
      max-width: 100%;
      width: 20em;
    }
  }

  #chat_messages::-webkit-scrollbar {
    width: 6px;
  }

  #chat_messages::-webkit-scrollbar-track {
    background: none;
  }

  #chat_messages::-webkit-scrollbar-thumb {
    background: rgba(255, 255, 255, 0.5);
  }

  #chat_input_container.hidden {
    display: none;
  }

  .message_user::after {
    content: ": ";
  }
}

.chat_emotes {
  max-width: 500px;
  max-height: 500px;

  .window-content {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;

    img {
      padding: 4px;
      max-height: 100px;
    }
  }
}

